# concurrent_lab_4_5

./: .~lock.Results.ods#  Assignment_120339P_120168N.cpp  CMakeLists.txt  DefaultParallel.cpp  OptimizedParallelMultiplication.cpp  Results.ods  Sequential.cpp  main.cpp  myprog  test.cpp
